compiler/actonc/test/syntaxerrors/err17.act
# Double dots in dictionary
def make_dict():
    return {x:: 1}